--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,3 +1,6 @@
+set-option -g default-terminal "screen-256color"
+set-option -a terminal-overrides ",*256col*:RGB"
+
 # prefix
 unbind C-b
 set-option -g prefix C-a
