--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -6,10 +6,6 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# for neovim
-set -sg escape-time 0
-set -g focus-events on
-
 # split panes
 bind | split-window -h
 bind - split-window -v
@@ -22,6 +18,11 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# panes and windows
+set-option -g renumber-windows on
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+
 # reload
 unbind r
 bind r source-file ~/.tmux.conf \; display "Sourced .tmux.conf."
@@ -31,9 +32,22 @@ set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
+# vim
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' { if -F '#{pane_at_left}' '' 'select-pane -L' }
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' { if -F '#{pane_at_bottom}' '' 'select-pane -D' }
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' { if -F '#{pane_at_top}' '' 'select-pane -U' }
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' { if -F '#{pane_at_right}' '' 'select-pane -R' }
+
+bind-key -T copy-mode-vi 'C-h' if -F '#{pane_at_left}' '' 'select-pane -L'
+bind-key -T copy-mode-vi 'C-j' if -F '#{pane_at_bottom}' '' 'select-pane -D'
+bind-key -T copy-mode-vi 'C-k' if -F '#{pane_at_top}' '' 'select-pane -U'
+bind-key -T copy-mode-vi 'C-l' if -F '#{pane_at_right}' '' 'select-pane -R'
+
+# tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'odedlaz/tmux-status-variables'
 
