--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -46,11 +46,13 @@ bind-key -T copy-mode-vi 'C-k' if -F '#{pane_at_top}' '' 'select-pane -U'
 bind-key -T copy-mode-vi 'C-l' if -F '#{pane_at_right}' '' 'select-pane -R'
 
 # tpm
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
-set -g @plugin 'odedlaz/tmux-status-variables'
+set-option -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'odedlaz/tmux-onedark-theme'
+set-option -g @plugin 'tmux-plugins/tmux-sensible'
+set-option -g @plugin 'aaronpowell/tmux-weather'
 
-set -g @onedark_widgets "#{uptime}"
+set-option -g @forecast-location "Seattle"
+set-option -g @forecast-format "%l+%t+%c&u"
+set-option -g @onedark_widgets '#{forecast} '
 
 run '~/.tmux/plugins/tpm/tpm'
