--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -22,6 +22,11 @@ bind l select-pane -R
 set-option -g renumber-windows on
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
+set-option -g window-size latest
+set-window-option -g aggressive-resize on
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{pane_current_command} #{b:pane_current_path}'
+set-window-option -g mode-keys vi
 
 # reload
 unbind r
