Add tmux quick window movement

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -18,6 +18,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# quick window movement
+bind -n S-right next
+bind -n S-left prev
+
 # panes and windows
 set-option -g renumber-windows on
 set-option -g base-index 1
