Update tmux date and time

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -62,6 +62,8 @@ set-option -g @plugin 'aaronpowell/tmux-weather'
 
 set-option -g @forecast-location "Seattle"
 set-option -g @forecast-format "%l+%t+%c&u"
+set-option -g @onedark_date_format "%D"
+set-option -g @onedark_time_format "%I:%M %p"
 set-option -g @onedark_widgets '#{forecast} '
 
 run '~/.tmux/plugins/tpm/tpm'
